# v0-omniweb-landing-page

./: .env.local.example  .env.production.example  .gitignore  .gitmodules  README.md  fix_youtube.js  index.html  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  tailwind.config.js  test-deployment.sh  test-yt.js  tsconfig.tsbuildinfo
ai/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  start.py
ai/app/: __init__.py  config.py  database.py  dependencies.py  main.py
ai/app/middleware/: __init__.py  tenant.py
ai/app/models/: __init__.py  analytics.py  base.py  business.py  conversation.py  integration.py  lead.py  tenant.py
ai/app/routers/: conversations.py  health.py  leads.py  legacy.py  tenants.py  voice.py
ai/app/schemas/: __init__.py  analytics.py  conversation.py  lead.py  tenant.py
ai/app/services/: __init__.py  auth.py  conversation.py  lead.py  tenant.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  seed.py  test-agent.html
backend/.do/: README.md  app.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_role_and_agent_templates.py  0003_add_language_support.py  0004_add_tool_call_logs.py  0005_add_phone_number_mode.py  0006_add_auth_reset_and_invite_fields.py  0007_add_multi_tenant_ai_platform_fields.py  0008_add_agent_mode_to_templates.py  0009_add_embed_code_fields.py  0010_add_webhook_events_and_clerk.py  0011_add_site_template_instances.py  0012_add_internal_user_permissions.py  0013_add_shopify_assistant_foundation.py  0014_add_shopify_oauth_install_fields.py  0015_add_shopify_billing_fields.py  0016_add_agent_website_domain.py  0017_retell_agent_and_call_ids.py  0018_saas_onboarding_fields.py  0019_dashboard_sync_models.py  0020_universal_agent_configuration.py  0021_widget_handshake_fields.py  0022_multi_tenant_retell_telephony.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: auth.py  config.py  database.py  logging.py  redis_client.py
backend/app/models/: __init__.py  models.py
backend/app/services/: agent_config_service.py  agent_modes.py  agent_templates.py  calendar_service.py  dashboard_sync_service.py  deepgram_service.py  elevenlabs_service.py  email_service.py  guardrail_middleware.py  industry_config.py  (+20 more)
backend/assets/: README.md
backend/backend/: README.md
backend/dashboard/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
backend/docs/: shopify-install-flow.md  shopify-production-architecture.md
backend/frontend/: README.md
backend/static/: widget.js
backend/tests/: test_shopify_assistant_service.py  test_shopify_oauth_service.py  test_shopify_storefront_bridge_service.py
(+393 files in other folders)
