[project]
name = "omniweb-assistant-api"
version = "0.1.0"
description = "FastAPI service for Omniweb-owned AI logic and automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "python-dotenv",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false
