[project]
name = "omniweb-assistant-api"
version = "2.0.0"
description = "Multi-tenant FastAPI service for Omniweb AI logic, automation, and business intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv",
  "uvicorn[standard]>=0.30.0",
  # Database
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "asyncpg>=0.29.0",
  "alembic>=1.12.0",
  "email-validator>=2.2.0",
  # AI and ML
  "openai>=1.3.0",
  "langchain>=0.1.0", 
  "langchain-openai>=0.1.0",
  # External Services
  "deepgram-sdk>=3.0.0",
  "livekit-api>=0.5.0",
  "supabase>=2.0.0",
  # Testing and Development
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false
